# 24news_practice

./: .gitignore  README.md  data_downloading.py  pyproject.toml
api/: .CPC.py.swp  .api.py.swo  .api.py.swp  CPC.py  CPC_w_tag.py  Creatives.py  Encoder.py  Model.py  Prediction.py  Preprocessor.py  SSP.py  Status.py  Tools.py  Train.py  api.py  api_new.py  settings.py
pickles/: cpc_with_weight.pkl  cpc_with_weight_only_creative_id.pkl  model.h5  model.json  model_cat_dict.pkl  model_cat_dict_3.pkl  prep_tools_dict.pkl  prep_tools_dict_keras.pkl  preprocessing_dict_cat.pickle  preprocessing_dict_cat_2.pickle  preprocessing_dict_cat_3.pkl  preprocessor_cat_pipline_dict.pkl  preprocessor_cat_pipline_dict_2.pkl  preprocessor_cat_pipline_dict_3.pkl  tf_model.json  x_test_prep_test.pkl
poetry/: README.md  pyproject.toml
practice/api/: CPC.py  Creatives.py  SSP.py  Tools.py  Train.py  api.py  settings.py
practice/config/: logging_config.py
practice/pickles/: prep_tools_dict_tf.pkl  tf_weights.h5
requests/: predict.json
scripts/: CPC_sliding.ipynb  Preprocessing_2.ipynb  Preprocessing_cat.ipynb  Untitled.ipynb  tf.ipynb  train_cols_dict.pkl
test/: dow_test.py
